# ArchiMage

./: .gitignore  CMakeLists.txt  CMakeLists.txt.save  README.md
headers/: Drawable.hpp  DrawableObject.hpp
include/lib_objectsReader/: CMakeLists.txt  objetsOFF.cpp  objetsOFF.hpp
include/lib_shaders/: CMakeLists.txt  fonctions.cpp  fonctions.hpp  glsl_fs.cpp  glsl_fs.hpp  glsl_program.cpp  glsl_program.hpp  glsl_vs.cpp  glsl_vs.hpp
shaders/: main_shader.vert  point_color.frag  point_color.vert  processNormal.vert
sources/: Drawable.cpp  DrawableObject.cpp  main.cpp
